--- a/hardware/content-robo-c2r2-board.ejs
+++ b/hardware/content-robo-c2r2-board.ejs
@@ -15,85 +15,85 @@ function hoverMouse(e) {
 		<map name="roboboardmap" comment="720 × 960">
 			<!--area shape="circle" coords="10,700,100" nohref title='Connector "X"'
 			  onClick="if (confirm('Visit part detail for connector marked X?') == true) document.location = '/hardware/robo-board#X';" -->
-			<area nohref title="Z" shape="poly"
+			<area nohref title="Z (JST-NVR-04 5mm pitch receptacle/header) -> Z stepper motor" shape="poly"
 				coords="37,687, 85,714, 51,771, 2,743">
-			<area nohref title="Y" shape="poly"
+			<area nohref title="Y (JST-NVR-04 5mm pitch receptacle/header) -> Y stepper motor" shape="poly"
 				coords="137,742, 190,769, 158,832, 105,800">
-			<area nohref title="X-" shape="poly"
+			<area nohref title="X- (JST-NVR-02 5mm pitch receptacle/header) -> X end-stop switch" shape="poly"
 				coords="237,793, 265,809, 233,875, 203,859">
-			<area nohref title="Z+" shape="poly"
+			<area nohref title="Z+ (JST-NVR-02 5mm pitch receptacle/header) -> Z end-stop switch" shape="poly"
 				coords="281,816, 309,833, 281,902, 248,884">
-			<area nohref title="Y-" shape="poly"
+			<area nohref title="Y- (JST-NVR-02 5mm pitch receptacle/header) -> Y end-stop switch" shape="poly"
 				coords="327,841, 358,859, 327,930, 296,908">
 
-			<area nohref title="E1" shape="poly"
+			<area nohref title="E1 (JST-NVR-04 5mm pitch receptacle/header) -> optional second (right-most) extruder thermistor" shape="poly"
 				coords="97,798, 426,735, 479,769, 453,831">
-			<area nohref title="X" shape="poly"
+			<area nohref title="X (JST-NVR-04 5mm pitch receptacle/header) -> X stepper motor" shape="poly"
 				coords="451,686, 477,630, 525,661, 504,711">
-			<area nohref title="E0" shape="poly"
+			<area nohref title="E0 (JST-NVR-04 5mm pitch receptacle/header) -> first (left-most) extruder thermistor" shape="poly"
 				coords="495,591, 518,545, 564,569, 547,612">
-			<area nohref title="Z-" shape="poly"
+			<area nohref title="Z- (JST-NVR-03 5mm pitch receptacle/header) -> Z end-stop switch (IR in uptown area)" shape="poly"
 				coords="522,542, 538,504, 582,531, 568,562">
-			<area nohref title="To Uptown Adapter" shape="poly"
+			<area nohref title="To Uptown Adapter (16 POS 2.54mm pitch rectangular shrounded header)" shape="poly"
 				coords="523,499, 570,398, 626,432, 586,524">
-			<area nohref title="Extr1" shape="poly"
+			<area nohref title="Extr1 (2 POS 5.08mm pitch terminal block) -> first (left-most) extruder" shape="poly"
 				coords="573,390, 597,339, 634,350, 623,384, 642,395, 623,429, 608,418, 615,390">
-			<area nohref title="Extr2" shape="poly"
+			<area nohref title="Extr2 (2 POS 5.08mm pitch terminal block) -> optional second (right-most) extruder" shape="poly"
 				coords="600,334, 615,302, 652,315, 641,356, 655,361, 643,392, 624,388, 637,349">
-			<area nohref title="Heated Bed" shape="poly"
+			<area nohref title="Heated Bed (4 POS 5.08mm pitch terminal block) -> optional heated bed" shape="poly"
 				coords="619,298, 642,248, 673,259, 664,302, 681,306, 658,360, 641,355, 656,313">
-			<area nohref title="Bed PWR IN" shape="poly"
+			<area nohref title="Bed PWR IN (4 POS 5.08mm pitch terminal block) -> optional external heated bed power" shape="poly"
 				coords="650,237, 673,195, 699,207, 691,235, 707,245, 691,286, 674,281, 684,248">
-			<area nohref title="PWR IN" shape="poly"
+			<area nohref title="PWR IN (2 POS 5.08mm pitch terminal block) -> optional external power in" shape="poly"
 				coords="675,190, 684,168, 715,178, 701,214, 716,222, 711,243, 695,239, 698,205">
 
-			<area nohref title="Bed (S,-)" shape="poly"
+			<area nohref title="Bed (S,-) (JST-NVR-02 5mm pitch receptacle/header) -> optional heated bed thermistor" shape="poly"
 				coords="396,489, 411,470, 457,481, 448,501">
-			<area nohref title="Fan1 (-,+)" shape="poly"
+			<area nohref title="Fan1 (-,+) (JST-NVR-02 5mm pitch receptacle/header) -> first fan power" shape="poly"
 				coords="411,463, 425,444, 470,457, 459,476">
-			<area nohref title="Fan2 (-,+)" shape="poly"
+			<area nohref title="Fan2 (-,+) (JST-NVR-02 5mm pitch receptacle/header) -> second fan power" shape="poly"
 				coords="424,438, 435,420, 483,432, 474,452">
-			<area nohref title="+5V (-,+)" shape="poly"
+			<area nohref title="+5V (-,+) (JST-NVR-02 5mm pitch receptacle/header)" shape="poly"
 				coords="440,413, 451,398, 499,410, 489,428">
 
-			<area nohref title="USB/5V selection jumper (5V=default)" shape="poly"
+			<area nohref title="USB/5V selection jumper (5V=default) (3 POS 2.54mm pitch unshrouded jumper header)" shape="poly"
 				coords="486,267, 495,242, 533,256, 519,280">
 			<area nohref title="Unknown 9-pin" shape="poly"
 				coords="499,209, 510,181, 553,192, 536,224">
-			<area nohref title="External (brick adapter) power jack" shape="poly"
+			<area nohref title="External (brick adapter) power jack (5.5mm*1.7mm positive tip) -> ADP-90SB BB adapter/charger 19V 4.74A out 100-240VAC 1.5A in 90W" shape="poly"
 				coords="511,175, 529,130, 584,152, 568,187">
-			<area nohref title="External ON/OFF switch" shape="poly"
+			<area nohref title="External ON/OFF switch (two-position rocker)" shape="poly"
 				coords="575,192, 599,135, 676,150, 661,204, 650,200, 652,182, 597,169, 586,195">
 
-			<area nohref title="Fuse 15A" shape="poly"
-				coords="591,279, 606,221, 629,184, 650,194, 636,240, 616,286">
-			<area nohref title="Fuse 7.5A" shape="poly"
+			<area nohref title="Fuse 15A (Regular ATS)" shape="poly"
+				coords="591,279, 606,221, 629,184, 650,194, 636,240, 616,286"> 
+			<area nohref title="Fuse 7.5A (Regular ATS)" shape="poly"
 				coords="567,233, 572,211, 580,201, 590,203, 599,172, 638,182, 622,187, 606,224, 602,244">
 
-			<area nohref title="D20" shape="poly"
+			<area nohref title="D20 (3 POS 2.54mm pitch unshrouded jumper header)" shape="poly"
 				coords="120,537, 129,522, 179,548, 164,563">
-			<area nohref title="D21" shape="poly"
+			<area nohref title="D21 (3 POS 2.54mm pitch unshrouded jumper header)" shape="poly"
 				coords="130,521, 137,511, 189,543, 181,551">
-			<area nohref title="D42" shape="poly"
+			<area nohref title="D42 (3 POS 2.54mm pitch unshrouded jumper header)" shape="poly"
 				coords="140,510, 149,500, 194,533, 188,543">
-			<area nohref title="D43" shape="poly"
+			<area nohref title="D43 (3 POS 2.54mm pitch unshrouded jumper header)" shape="poly"
 				coords="146,502, 154,490, 200,522, 195,530">
-			<area nohref title="D44" shape="poly"
+			<area nohref title="D44 (3 POS 2.54mm pitch unshrouded jumper header)" shape="poly"
 				coords="154,493, 163,479, 208,514, 203,527">
-			<area nohref title="D45" shape="poly"
+			<area nohref title="D45 (3 POS 2.54mm pitch unshrouded jumper header)" shape="poly"
 				coords="162,485, 176,471, 216,500, 210,515">
 
-			<area nohref title="Unknown 6-pin" shape="poly"
+			<area nohref title="Unknown 6-pin (6 POS 2.54mm pitch rectangular unshrouded header)" shape="poly"
 				coords="241,426, 250,399, 290,421, 276,441">
 
-			<area nohref title="EXP2" shape="poly"
+			<area nohref title="EXP2 (10 POS 2.54mm pitch rectangular shrouded header)" shape="poly"
 				coords="273,378, 268,349, 313,299, 343,309, 346,341, 305,390">
-			<area nohref title="EXP1" shape="poly"
+			<area nohref title="EXP1 (10 POS 2.54mm pitch rectangular shrouded header)" shape="poly"
 				coords="319,296, 357,250, 385,261, 390,287, 352,334, 348,305">
-			<area nohref title="Ext SD" shape="poly"
+			<area nohref title="Ext SD (8 POS 2.54mm pitch rectangular shrouded header)" shape="poly"
 				coords="374,256, 372,233, 406,198, 431,205, 431,229, 403,267">
 
-			<area nohref title="USB Type B to Raspi" shape="poly"
+			<area nohref title="USB to Raspberry Pi 3 (USB Type B Receptacle)" shape="poly"
 				coords="383,211, 384,174, 402,155, 451,166, 454,201, 436,225, 433,200, 406,195, 390,215">
 			<area nohref title="Internal unknown slider switch" shape="poly"
 				coords="423,159, 435,144, 459,155, 457,169">
