--- a/consumables/content.ejs
+++ b/consumables/content.ejs
@@ -3,6 +3,7 @@
 	<div class="col-md-10">
 		<h2 onClick='document.location="/consumables/filament-by-type-by-vendor";'>Filament by Type by Vendor</h2>
 		<p>Go <a href="/consumables/filament-by-type-by-vendor">here</a> for the filament database.</p>
+		<p>&nbsp;</p>
 		<hr>
 		<h2>Filament Information by Type</h2>
 		<table class="table table-bordered table-hover table-responsive">
