--- a/hardware/content.ejs
+++ b/hardware/content.ejs
@@ -23,11 +23,15 @@
 	<div class="col-md-10">
 		<h2 onClick='document.location="/hardware/parts-by-printer-by-vendor";'>Parts by Printer by Vendor</h2>
 		<p>Go <a href="/hardware/parts-by-printer-by-vendor">here</a> for the full part database.</p>
+		<p>&nbsp;</p>
+		
 		<h2 onClick='document.location="/hardware/robo-c2r2-board";'>Robo Board</h2>
 		<p>Go <a href="/hardware/robo-c2r2-board">here</a> to see all connections for the Robo control board for the C2/R2 printers.</p>
 		<hr>
 
 		<a name="robo-c2"></a>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
 		<h2 onClick='document.location="#";'>Robo C2</h2>
 		<p style='text-align:justify'>
 			<div id="C2DefaultScreen">Hover over the exploded image below to find more detail about the parts and subassemblies.</div>
@@ -52,6 +56,8 @@
 		<hr>
 
     <a name="robo-r2"></a>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
 		<h2>Robo R2</h2>
 		<p style='text-align:justify;color:gray'><i>Hover over the image below to find more detail about the parts and subassemblies. (Feature not yet implemented.)</i></p>
 		<img class="R2_hw" src="/images/Robo_R2_FrontLarge.png">
@@ -59,6 +65,8 @@
 		<hr>
 		
     <a name="robo-r1plus"></a>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
 		<h2>Robo R1+ Plus</h2>
 		<p style='text-align:justify;color:gray'><i>Hover over the image below to find more detail about the parts and subassemblies. (Feature not yet implemented.)</i></p>
 		<img class="R1_hw" src="/images/Robo_R1Plus_FrontLarge.jpg">
