--- a/software/content.ejs
+++ b/software/content.ejs
@@ -7,6 +7,8 @@
 		<hr>
 
 		<a name="robo-c2"></a>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
 		<h2 onClick='document.location="#";'>Robo C2</h2>
 		<p style='text-align:justify'>Out-of-the-box, the printer comes with the following software pre-installed:
 			<ul>
@@ -25,6 +27,8 @@
 
 		<hr>
     <a name="robo-r2"></a>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
 		<h2 onClick='document.location="#";'>Robo R2</h2>
 		<p style='text-align:justify'>Out-of-the-box, the printer comes with the following software pre-installed:
 			<ul>
@@ -43,6 +47,8 @@
 
 		<hr>
     <a name="robo-r1plus"></a>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
 		<h2 onClick='document.location="#";'>Robo R1+ Plus</h2>
 		<p style='text-align:justify'>Out-of-the-box, the printer comes with the following software pre-installed:
 			<ul>
