--- a/troubleshooting/content.ejs
+++ b/troubleshooting/content.ejs
@@ -1,8 +1,10 @@
 
 <!-- Example row of columns -->
+<a name="robo-c2"></a>
 <div class="row">
 	<div class="col-md-10">
-    <a name="robo-c2"></a>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
 		<h2 onClick='document.location="#";'>Robo C2</h2>
 		<p style='text-align:justify'>First things first: if you haven't already done so, run the printer's Z Offset Wizard from the LCD screen. Properly adjusting the height of the extruder assembly from the print bed should solve a variety of print quality—related issues. Here's a checklist of basic tasks:
 			<ul>
@@ -17,7 +19,9 @@
 			</ul>
 		</p>
 
-    <a name="robo-r2"></a>
+		<a name="robo-r2"></a>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
 		<h2 onClick='document.location="#";'>Robo R2</h2>
 		<p style='text-align:justify'>First things first: if you haven't already done so, run the printer's Z Offset Wizard from the LCD screen. Properly adjusting the height of the extruder assembly from the print bed should solve a variety of print quality—related issues. Here's a checklist of basic tasks:
 			<ul>
@@ -35,6 +39,8 @@
 		</p>
 		
     <a name="robo-r1plus"></a>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
 		<h2 onClick='document.location="#";'>Robo R1+ Plus</h2>
 		<p style='text-align:justify'>Here's a checklist of basic tasks:
 			<ul>
