--- a/views/content-robo-c2.ejs
+++ b/views/content-robo-c2.ejs
@@ -18,10 +18,10 @@
 		</p>
 	</div>
 	<div class="col-md-4">
-		<h2 onClick='document.location="/troubleshooting#robo-r2";'>Troubleshooting</h2>
+		<h2 onClick='document.location="/troubleshooting#robo-c2";'>Troubleshooting</h2>
 		<p style='text-align:justify'>Troubleshooting information, tips and tricks, print quality tuning</p>
 		<p>
-			<a class="btn btn-default" href="/troubleshooting#robo-r2" role="button">View details
+			<a class="btn btn-default" href="/troubleshooting#robo-c2" role="button">View details
 				&raquo;</a>
 		</p>
 	</div>
