--- a/hardware/content-parts-by-printer-by-subassembly.ejs
+++ b/hardware/content-parts-by-printer-by-subassembly.ejs
@@ -67,34 +67,34 @@
 						<td class="text-center"><a href="https://store.robo3d.com/collections/parts/products/hotend-c2" target="_blank">Link</a></td>
 					</tr>
 					<tr>
-						<td>Left belt X, (directly connected to X stepper)</td>
-						<td class="text-right">N/A</td>
-						<td class="text-center">N/A</td>
+						<td>Left belt X GT2 2mm pitch 6mm wide timing belt 2M-460-6, (directly connected to X stepper)</td>
+						<td class="text-right">$8.86</td>
+						<td class="text-center"><a href="https://www.amazon.com/SCStyle-Meters-Pitch-Timing-Printer/dp/B00F2IQNX8" target="_blank">Link</a></td>
 					</tr>
 					<tr>
-						<td>Upper belt X, (left-to-right across back of printer)</td>
-						<td class="text-right">N/A</td>
-						<td class="text-center">N/A</td>
+						<td>Upper belt X GT2 2mm pitch 6mm wide timing belt 2M-460-6, (left-to-right across back of printer)</td>
+						<td class="text-right">$8.86</td>
+						<td class="text-center"><a href="https://www.amazon.com/SCStyle-Meters-Pitch-Timing-Printer/dp/B00F2IQNX8" target="_blank">Link</a></td>
 					</tr>
 					<tr>
-						<td>Right belt Y, (directly connected to Y stepper)</td>
-						<td class="text-right">N/A</td>
-						<td class="text-center">N/A</td>
+						<td>Right belt Y GT2 2mm pitch 6mm wide timing belt 2M-460-6, (directly connected to Y stepper)</td>
+						<td class="text-right">$8.86</td>
+						<td class="text-center"><a href="https://www.amazon.com/SCStyle-Meters-Pitch-Timing-Printer/dp/B00F2IQNX8" target="_blank">Link</a></td>
 					</tr>
 					<tr>
-						<td>Upper left belt Y, (front-to-back across left side of printer)</td>
-						<td class="text-right">N/A</td>
-						<td class="text-center">N/A</td>
+						<td>Upper left belt Y GT2 2mm pitch 6mm wide timing belt 2M-460-6, (front-to-back across left side of printer)</td>
+						<td class="text-right">$8.86</td>
+						<td class="text-center"><a href="https://www.amazon.com/SCStyle-Meters-Pitch-Timing-Printer/dp/B00F2IQNX8" target="_blank">Link</a></td>
 					</tr>
 					<tr>
-						<td>Upper right belt Y, (front-to-back across right side of printer)</td>
-						<td class="text-right">N/A</td>
-						<td class="text-center">N/A</td>
+						<td>Upper right belt Y GT2 2mm pitch 6mm wide timing belt 2M-460-6, (front-to-back across right side of printer)</td>
+						<td class="text-right">$8.86</td>
+						<td class="text-center"><a href="https://www.amazon.com/SCStyle-Meters-Pitch-Timing-Printer/dp/B00F2IQNX8" target="_blank">Link</a></td>
 					</tr>
 					<tr>
-						<td>Stepper motor A/B (1 of 2)</td>
-						<td class="text-right">N/A</td>
-						<td class="text-center">N/A</td>
+						<td>Stepper motor A/B 42HS40-1704JA06-019 40mm 3.4V 2 phase 1.7A 4 wire 1.8 degree step angle (1 of 2)</td>
+						<td class="text-right">$12.99</td>
+						<td class="text-center"><a href="https://www.amazon.com/Stepper-Motor-Bipolar-64oz-Printer/dp/B00PNEQI7W" target="_blank">Link</a></td>
 					</tr>
 					<tr>
 						<td>Bowden NEMA 17 stepper motor for extruder 2A, 4 lead 40mm, 1.8&deg; step angle (for optional second extruder or to replace original)</td>
@@ -137,9 +137,9 @@
 						<td class="text-center">N/A</td>
 					</tr>
 					<tr>
-						<td>Upper fan</td>
-						<td class="text-right">N/A</td>
-						<td class="text-center">N/A</td>
+						<td>Upper hotend fan (rear), Tornado High Speed Fan 25x25mm</td>
+						<td class="text-center">$5.90</td>
+						<td class="text-center"><a href="https://www.amazon.com/Yeah-Racing-Tornado-Bearing-YA-0201/dp/B00TDG2A14/ref=pd_lpo_vtph_21_lp_t_2?_encoding=UTF8&psc=1&refRID=49H9AEGGEQEN0CYWM667&dpID=51d3bDpdZ2L&preST=_SY300_QL70_&dpSrc=detail" target="_blank">Link</a></td>
 					</tr>
 					<tr>
 						<td>E3D hardened steel nozzle - 1.75mm filament, 0.4mm nozzle (select filament/nozzle size on page)</td>
@@ -200,9 +200,9 @@
 					<tr>
 						<a name="robo-c2-panels"></a>
 						<td rowspan="5">Panels, LCD</td>
-						<td>LCD</td>
-						<td class="text-right">N/A</td>
-						<td class="text-center">N/A</td>
+						<td>LCD 3.5 Inch 320 X 480 TFT LCD Display Touch Board</td>
+						<td class="text-right">$16.71</td>
+						<td class="text-center"><a href="https://www.banggood.com/3_5-Inch-320-X-480-TFT-LCD-Display-Touch-Board-For-Raspberry-Pi-2-Model-B-RPI-B-p-1023432.html" target="_blank">Link</a></td>
 					</tr>
 					<tr>
 						<td>Pi NoIR camera v2 (8MP)</td>
